--- a/Projects/Template/Platforms/Emscripten/Index.html
+++ b/Projects/Template/Platforms/Emscripten/Index.html
@@ -97,7 +97,7 @@
 			};
 		};
 	</script>
-	<script src=@project_name@.wasm.js></script>
+	<script src='@project_name@.wasm.js'></script>
 	<script type='text/javascript'>
 		// add params to C wasm and run function main(argc, argv)
 		arguments_.push(canvas.width.toString());
